Fix whitespace below landing row tiles

--- a/_sass/website/landing-row.scss
+++ b/_sass/website/landing-row.scss
@@ -226,16 +226,7 @@ $landing-title-color: #4A4A4A;
 
             .landing-row__tile {
                 width: 23%;
-                display: -webkit-box;
-                display: -ms-flexbox;
-                display: flex;
-                -webkit-box-orient: vertical;
-                -webkit-box-direction: normal;
-                -ms-flex-direction: column;
-                flex-direction: column;
-                -webkit-box-pack: justify;
-                -ms-flex-pack: justify;
-                justify-content: space-between;
+                display: block;
                 border-bottom: none;
                 margin-bottom: 0;
 
